--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-<import type="com.wsyd.mvvmdemo.UserBean"/>
         <variable
             name="user"
-            type="UserBean"/>
+            type="com.wsyd.mvvmdemo.bean.User"/>
     </data>
 
     <LinearLayout
@@ -31,6 +30,11 @@
             android:text="@{user.getAge}"
             android:textColor="#45aa99"
             android:textSize="20sp"/>
+        <Button
+            android:id="@+id/click"
+            android:text="@{user.action}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 
